--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "antd": "^4.16.13",
+    "buffer": "^6.0.3",
+    "cordova-plugin-qrscanner": "^3.0.1",
+    "jpeg-js": "^0.4.3",
+    "jsqr": "^1.4.0",
     "native-base": "^3.2.1",
+    "pngjs": "^6.0.0",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-minimal-side-navigation": "^1.9.2",
@@ -41,10 +46,10 @@
     "react-native-flexi-radio-button": "^0.2.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-i18n": "^2.0.15",
-    "react-native-image-picker": "^2.3.4",
+    "react-native-image-picker": "^2.4.0",
     "react-native-navigation-drawer-layout": "^0.0.7",
     "react-native-paper": "^4.9.2",
-    "react-native-qr-decode-image-camera": "^1.0.4",
+    "react-native-qr-decode-image-camera": "1.0.3",
     "react-native-qrcode-scanner": "^1.5.4",
     "react-native-reanimated": "^2.2.3",
     "react-native-responsive-screen": "^1.4.2",
@@ -67,6 +72,7 @@
     "rn-fetch-blob": "^0.12.0",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5",
+    "uglify-js": "^3.14.3",
     "use-state-if-mounted": "^1.0.4"
   },
   "devDependencies": {
