--- a/ios/Bplus_Executive.xcodeproj/xcshareddata/xcschemes/Bplus_Executive.xcscheme
+++ b/ios/Bplus_Executive.xcodeproj/xcshareddata/xcschemes/Bplus_Executive.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "bplus_executive.app"
+               BuildableName = "Bplus_Executive.app"
                BlueprintName = "Bplus_Executive"
-               ReferencedContainer = "container:bplus_executive.xcodeproj">
+               ReferencedContainer = "container:Bplus_Executive.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -35,7 +35,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "Bplus_ExecutiveTests.xctest"
                BlueprintName = "Bplus_ExecutiveTests"
-               ReferencedContainer = "container:bplus_executive.xcodeproj">
+               ReferencedContainer = "container:Bplus_Executive.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "bplus_executive.app"
+            BuildableName = "Bplus_Executive.app"
             BlueprintName = "Bplus_Executive"
-            ReferencedContainer = "container:bplus_executive.xcodeproj">
+            ReferencedContainer = "container:Bplus_Executive.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "bplus_executive.app"
+            BuildableName = "Bplus_Executive.app"
             BlueprintName = "Bplus_Executive"
-            ReferencedContainer = "container:bplus_executive.xcodeproj">
+            ReferencedContainer = "container:Bplus_Executive.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
