bulid IOS = android

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,6 +16,19 @@ target 'Bplus_Executive' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
+
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
+  pod 'RNI18n', :path => '../node_modules/react-native-i18n'
+
+  permissions_path = '../node_modules/react-native-permissions/ios'
+
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
+
+
   target 'Bplus_ExecutiveTests' do
     inherit! :complete
     # Pods for testing
