--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,11 +6,13 @@ buildscript {
         minSdkVersion = 21
         compileSdkVersion = 30
         targetSdkVersion = 30
-        ndkVersion = "21.4.7075529"
+        supportLibVersion   = "30.0.2"
+        playServicesVersion = "17.0.0" // or find latest version
+        androidMapsUtilsVersion = "1.2.1"
     }
     repositories {
         google()
-        mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath("com.android.tools.build:gradle:4.2.2")
@@ -20,8 +22,7 @@ buildscript {
 }
 
 allprojects {
-    repositories {
-        mavenCentral()
+    repositories { 
         mavenLocal()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
@@ -33,6 +34,7 @@ allprojects {
         }
 
         google()
+        jcenter()
         maven { url 'https://www.jitpack.io' }
     }
 }
