--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "^2.2.0",
+    "@react-native-community/picker": "^1.8.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
@@ -37,19 +37,19 @@
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-minimal-side-navigation": "^1.9.2",
-    "react-native": "^0.66.1",
-    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
+    "react-native": "^0.66.3",
+    "react-native-camera": "^4.2.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-device-info": "^8.4.1",
     "react-native-dialog": "^9.1.2",
     "react-native-flexi-radio-button": "^0.2.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-i18n": "^2.0.15",
-    "react-native-image-picker": "^2.4.0",
+    "react-native-image-picker": "^2.3.4",
     "react-native-navigation-drawer-layout": "^0.0.7",
     "react-native-paper": "^4.9.2",
     "react-native-permissions": "^3.1.0",
-    "react-native-qr-decode-image-camera": "^1.0.5",
+    "react-native-qr-decode-image-camera": "^1.0.4",
     "react-native-qrcode-scanner": "^1.5.4",
     "react-native-reanimated": "^2.2.3",
     "react-native-responsive-screen": "^1.4.2",
